# tiny-ml-lib

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  batcher.py  cnn-weights.pkl  conv2d.py  defs.py  flatten.py  layer.py  linear.py  losses.py  main.py  maxpool.py  mlp-weights.pkl  model.py  model_weights.pkl  pyproject.toml  relu.py  requirements.txt  test  test.cu
cuda/: README.md  activations.cu  activations.cuh  common.cuh  core.cu  errors.cuh  hello.cpp  lib.cpp  mat_ops.cu  mat_ops.cuh  matmul  matmul.cu  matmul.cuh  maxpool  maxpool.cu  maxpool.cuh  maxpool_api.cu  maxpool_tests.cu  maxpool_utils.hpp
native/: __init__.py  native_fallback.py
